Fix/office section alignment (#217)

--- a/src/styles/includes/_locations.scss
+++ b/src/styles/includes/_locations.scss
@@ -6,9 +6,11 @@
 	overflow-y: hidden;
 	grid-gap: 0 $spacing--150;
 	grid-template-rows: auto auto 1fr;
-	padding-left: 1.6rem;
+	padding-left: $spacing--200;
 
 	@include bp-xs() {
+		margin-left: calc(#{$spacing--400} - #{$spacing--200});
+
 		#hamburg,
 		#berlin {
 			.is-large {
@@ -22,6 +24,22 @@
 				margin-top: 5rem;
 			}
 		}
+	}
+
+	@include bp-s {
+		margin-left: calc(#{$spacing--700} - #{$spacing--200});
+	}
+
+	@include bp-m {
+		margin-left: calc(#{$spacing--700--desktop} - #{$spacing--200});
+	}
+
+	@include bp-l {
+		margin-left: calc(#{$spacing--700--desktop} - #{$spacing--200});
+	}
+
+	@include bp-xl {
+		margin-left: calc(12.8rem - #{$spacing--200});
 	}
 
 	@include bp-tablet {
@@ -122,7 +140,7 @@
 	}
 
 	&__content-studio-wrapper {
-		display: flex;
+		display: grid;
 		flex-wrap: wrap;
 		grid-column: 1/7;
 		grid-row: 2/3;
